# homework-python

./: .gitignore  README.md  main.py  pyproject.toml  удалено
src/: masks.py  processing.py  widget.py
