[project]
name = "homework"
version = "0.1.0"
description = ""
authors = [
    {name = "Василий",email = "kulikov821999@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


[flake8]
max-line-length = 119
exclude = ".*\\.git.*, .*\\__pycache__.*"


[isort]
max-line_length = 119


[black]
max-line-length = 119
exclude = ".*\\.git.*"


[mypy]
disallow_untyped_defs = true
warn_return_any = true
exclude = ".*\\venv.*"


[tool.poetry.group.lint.dependencies]
flake8 = "^7.3.0"
mypy = "^1.17.0"
isort = "^6.0.1"
black = "^25.1.0"
